k8s/network/network-policies/poda-block-podb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-poda
spec:
  podSelector:
    matchLabels:
      run: poda
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: podc
      ports:
        - port: 80
          protocol: TCP
