k8s/network/network-policies/podb-deny-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-enable-dns
spec:
  podSelector:
    matchLabels:
      run: podb
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              run: podc
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
