k8s/network/network-policies/podc-block-podb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-podc
spec:
  podSelector:
    matchLabels:
      run: podc
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: poda
      ports:
        - protocol: TCP
          port: 80
